linux-2.6-openmoko (20080903.git2ea34171-2) UNRELEASED; urgency=low

  * debian/rules:
    + correctly capitalize FreeRunner in uImage name.
    + s/Openmoko/Debian/ in uImage name.

 --

linux-2.6-openmoko (20080903.git2ea34171-1) pkg-fso; urgency=low

  * New Git Checkout:
    + milestone3.
    + use the last 8 digits to identify the Git commit.

  * debian/rules:
    + uImage.bin must be a real file, vfat partitions don't support
      symlinks, thanks to Michele Renda <michele.renda@gmail.com>.

 -- Luca Capello <luca@pca.it>  Tue, 21 Oct 2008 15:43:20 +0200

linux-2.6-openmoko (20080808.git43620428-2) pkg-fso; urgency=low

  * debian/control:
    + reword the team name.
    + add myself to Uploaders:.
    + add Vcs-* fields.
    + Build-Depends: on quilt.
    + use upstream clean target.
    + clean uImage files.
    - remove gcc-4.1 from Build-Depends:.

  * debian/copyright:
    + link to the GPL-2 file.
    + add Debian packaging section.
    + add myself for the Debian packaging.

  * debian/patches/series: new file.
  * debian/patches/01_fix-timespec_add_ns-in-time.h.patch:
    + backport upstream fix for missing __udivdi3, Openmoko kernel
      commit 38332cb98772f5ea757e6486bed7ed0381cb5f98.

  * debian/rules:
    + correct typo s/ARM/ARCH/.
    + add missing \ for modules_install.
    + adapt to quilt.
    + install uImage.
    - don't build with gcc-4.1.

 -- Luca Capello <luca@pca.it>  Sun, 19 Oct 2008 15:01:13 +0200

linux-2.6-openmoko (20080808.git43620428-1) experimental; urgency=low

  * Initial release of a kernel package building uboot images suitable
    for use on the Neo Freerunner and corresponding modules.

 -- Philipp Kern <pkern@debian.org>  Fri, 08 Aug 2008 02:14:25 -0300
