@@ -3,6 +3,7 @@ linux-2.6-openmoko (20080903.git2ea34171-2) UNRELEASED; urgency=low
   * debian/rules:
     + correctly capitalize FreeRunner in uImage name.
     + s/Openmoko/Debian/ in uImage name.
+    + s/VERSION/VERSION_EXTRA/ since it's used as make's EXTRAVERSION.
 
  --
 
